--- a/com.grack.adventure.logic/pom.xml
+++ b/com.grack.adventure.logic/pom.xml
@@ -30,7 +30,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.6.0-rc3</version>
+				<version>2.7.0</version>
 				<executions>
 					<execution>
 						<goals>
