--- a/com.grack.adventure.web/pom.xml
+++ b/com.grack.adventure.web/pom.xml
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-user</artifactId>
-			<version>2.6.0-rc3</version>
+			<version>2.7.0</version>
 		</dependency>
 	</dependencies>
 
