--- a/com.grack.adventure.logic/pom.xml
+++ b/com.grack.adventure.logic/pom.xml
@@ -16,7 +16,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>19.0</version>
+			<version>28.1-jre</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -30,7 +30,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.8.0</version>
+				<version>2.8.2</version>
 				<executions>
 					<execution>
 						<goals>
