--- a/com.grack.adventure.web/pom.xml
+++ b/com.grack.adventure.web/pom.xml
@@ -16,7 +16,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava-gwt</artifactId>
-			<version>19.0</version>
+			<version>28.1-jre</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>com.google.gwt</groupId>
 			<artifactId>gwt-user</artifactId>
-			<version>2.8.0</version>
+			<version>2.8.2</version>
 		</dependency>
 	</dependencies>
 
@@ -40,7 +40,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.8.0</version>
+				<version>2.8.2</version>
 				<configuration>
 					<webappDirectory>${basedir}/war</webappDirectory>
 					<logLevel>DEBUG</logLevel>
